CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT(torch-pcl)

FIND_PACKAGE(PCL 1.3 REQUIRED)
FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(VTK REQUIRED)

INCLUDE(${VTK_USE_FILE})

INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS} ${Torch_INSTALL_INCLUDE})
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS} "${Torch_INSTALL_LIB}")
ADD_DEFINITIONS(${PCL_DEFINITIONS})

SET(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
# Linker options
SET(CMAKE_LDFLAGS "${CMAKE_LDFLAGS}  ")

# Library path
SET(CMAKE_LDFLAGS "${CMAKE_LDFLAGS} -L\".\" ")

SET(src 
  "${SOURCE_DIR}/cloudviewer.cpp"
  "${SOURCE_DIR}/xyz.cpp"
  "${SOURCE_DIR}/xyzi.cpp"
  "${SOURCE_DIR}/xyzrgba.cpp"
  "${SOURCE_DIR}/normal.cpp"
  "${SOURCE_DIR}/xyzinormal.cpp"
  "${SOURCE_DIR}/xyzrgbnormal.cpp"
)

FILE(GLOB luasrc *.lua)

ADD_TORCH_PACKAGE(pcl "${src}" "${luasrc}")

TARGET_LINK_LIBRARIES(pcl TH ${PCL_LIBRARIES} ${VTK_LIBRARIES})

INSTALL(DIRECTORY "doc" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/pcl")
INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/pcl")
